h1のテキストを更新

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
-    <h1>Git hub TEST</h1>
+    <h1>BIG Git hub TEST</h1>
     <p>これはギットハブのテストです。</p>
 </body>
 </html>
