元々の内容からcssアニメーションについてのコードに変更しました。

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git hub TEST</title>
+    <link rel="stylesheet" href="./assets/style/reset.css">
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
-    <h1>BIG Git hub TEST</h1>
-    <p>これはギットハブのテストです。</p>
-
-    <p>2024/11/12 テキストを追加しました。</p>
+    <div class="stage">
+        <div class="ball"></div>
+    </div>
 </body>
 </html>
 
